--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -31,7 +31,7 @@ h2 {
 
 h3 {
     font-size: 32px;
-    font-weight: 400;
+    font-weight: 500;
 }
 
 p {
@@ -57,7 +57,7 @@ a {
 
 /* FONTS - MOBILE */
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
 
     h1 {
         font-size: 64px;
@@ -115,7 +115,7 @@ header {
 
 /* HEADER SECTION - MOBILE */
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
 
     header {
         display: flex;
@@ -177,7 +177,7 @@ main {
 
 /* MAIN SECTION - MOBILE */
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
 
     main {
         margin: 0 5%;
@@ -205,7 +205,7 @@ main {
 
 /* BANNER SECTION - MOBILE */
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
 
     #banner {
         max-width: 350px;
@@ -224,7 +224,7 @@ main {
 
 /* BORDER TOP COLOR - MOBILE */
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
 
     .border_color_top {
         width: 48px;
@@ -272,7 +272,7 @@ main {
 
 /* COLOR SECTION - MOBILE */
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
 
     #color {
         padding-top: 102px;
@@ -313,6 +313,7 @@ main {
 
 .button1 {
     background-color: #1D3557;
+    cursor: default;
 }
 
 .button2 {
@@ -326,11 +327,12 @@ main {
 
 .button4 {
     background-color: #A9A9A9;
+    cursor: not-allowed;
 }
 
 /* BUTTON SECTION - MOBILE */
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
 
     #button {
         padding: 102px 0 16px 0;
@@ -394,7 +396,7 @@ main {
 
 /* FONT SECTION - MOBILE */
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
 
     #font {
         padding-top: 102px;
@@ -449,7 +451,7 @@ main {
 
 /* TEXT STYLE SECTION - MOBILE */
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
 
     #text_style {
         padding-top: 102px;
