--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -127,7 +127,7 @@ header {
         position: fixed;
         top: 0;
         right: -100%;
-        background-color: #A8DADC;
+        background-color: #ffffff;
         width: 100%;
         height: 100%;
         display: flex;
