--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -97,7 +97,7 @@ header {
 
 .navigation ul li:hover {
   border-top: 2px solid #E63946;
-  transition: .75s;
+  transition: all .75s;
 }
 
 .navigation ul li a {
@@ -105,10 +105,7 @@ header {
     letter-spacing: 2px;
 }
 
-.menu-button {
-    display: none;
-}
-
+.menu-button,
 .close-button {
     display: none;
 }
@@ -134,7 +131,7 @@ header {
         justify-content: center;
         align-items: center;
         z-index: 2;
-        transition: .5s;
+        transition: all .5s;
     }
 
     .navigation.active {
@@ -468,4 +465,8 @@ footer {
     color: #000000;
     text-align: center;
     padding: 24px;
+}
+
+footer p {
+    font-size: 14px;
 }
