--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -101,7 +101,7 @@ header {
 }
 
 .navigation ul li a {
-    color: #000000;
+    color: #000;
     letter-spacing: 2px;
 }
 
@@ -124,7 +124,7 @@ header {
         position: fixed;
         top: 0;
         right: -100%;
-        background-color: #ffffff;
+        background-color: #fff;
         width: 100%;
         height: 100%;
         display: flex;
@@ -250,7 +250,7 @@ main {
 
 .honeydew {
     background-color: #F1FAEE;
-    border: 1px solid #000000;
+    border: 1px solid #000;
 }
 
 .powder-blue {
@@ -259,12 +259,12 @@ main {
 
 .celadon-blue {
     background-color: #457B9D;
-    color: #ffffff;
+    color: #fff;
 }
 
 .prussian-blue {
     background-color: #1D3557;
-    color: #ffffff;
+    color: #fff;
 }
 
 /* COLOR - MOBILE */
@@ -369,12 +369,12 @@ main {
 .roboto a {
     font-family: 'Roboto', sans-serif;
     font-size: 32px;
-    color: #000000;
+    color: #000;
 }
 
 .cabin a {
     font-size: 32px;
-    color: #000000;
+    color: #000;
 }
 
 .roboto a:hover,
@@ -462,11 +462,16 @@ main {
 /* FOOTER */
 
 footer {
-    color: #000000;
+    color: #000;
     text-align: center;
     padding: 24px;
 }
 
 footer p {
     font-size: 14px;
+}
+
+footer a {
+    color: #000;
+    text-decoration: underline;
 }
